--- a/question/templates/question/t_er_active.html
+++ b/question/templates/question/t_er_active.html
@@ -220,39 +220,19 @@
 </div>
 </div>
 
-<!--
-<div class="List ProfileActivities" id="Profile-activities" data-zop-feedlistfather="1">
-<div class="List-header">
-<h4 class="List-headerText"><span>我的动态</span></h4>
-<div class="List-headerOptions">
-</div>
-</div>
-<div class="">
-<div class="List-item">
-<div class="List-itemMeta">
-<div class="ActivityItem-meta">
-<span class="ActivityItem-metaTitle">关注了话题</span><span>17 天前</span></div></div><div class="ContentItem" data-za-module="TopicItem" data-za-module-info="{&quot;card&quot;:{&quot;content&quot;:{&quot;type&quot;:&quot;Topic&quot;,&quot;token&quot;:&quot;19550429&quot;,&quot;item_num&quot;:164811,&quot;follower_num&quot;:19177109}}}"><div class="ContentItem-main"><div class="ContentItem-image"><a class="TopicLink" href="/topic/19550429" target="_blank"><div class="Popover"><div id="Popover-21827-29778-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-21827-29778-content"><img class="Avatar Avatar--large TopicLink-avatar" width="60" height="60" src="https://pic4.zhimg.com/50/7d8c15df29ce6900c80f9cf630992687_im.jpg" srcset="https://pic4.zhimg.com/50/7d8c15df29ce6900c80f9cf630992687_xl.jpg 2x" alt="电影"></div></div></a></div><div class="ContentItem-head"><h2 class="ContentItem-title"><a class="TopicLink" href="/topic/19550429" target="_blank">
-<div class="Popover">
-<div id="Popover-21827-12864-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-21827-12864-content">电影</div>
-</div>
-</div>
-</div>
-</div>
-<div>
-</div>
-</div>
-</div>
-</div>
--->
 
-<div class="List Profile-answers" id="Profile-answers" data-zop-feedlistfather="1">
+
+<!--
+<div class="List Profile-answers" id="11Profile-answers" data-zop-feedlistfather="1">
 <div class="List-header">
 <h4 class="List-headerText"><span>他的回答</span></h4>
+
 <div class="List-headerOptions">
 <div class="Popover">
 <button class="Button Select-button Select-plainButton Button--plain" role="combobox" aria-expanded="false" type="button" id="Popover-94547-77643-toggle" aria-haspopup="true" aria-owns="Popover-94547-77643-content">按时间排序<span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Select Select-arrow" fill="#9fadc7" viewBox="0 0 24 24" width="24" height="24"><path d="M12 16.183l2.716-2.966a.757.757 0 0 1 1.064.001.738.738 0 0 1 0 1.052l-3.247 3.512a.758.758 0 0 1-1.064 0L8.22 14.27a.738.738 0 0 1 0-1.052.758.758 0 0 1 1.063 0L12 16.183zm0-9.365L9.284 9.782a.758.758 0 0 1-1.064 0 .738.738 0 0 1 0-1.052l3.248-3.512a.758.758 0 0 1 1.065 0L15.78 8.73a.738.738 0 0 1 0 1.052.757.757 0 0 1-1.063.001L12 6.818z" fill-rule="evenodd"></path></svg></span></button>
 </div>
 </div>
+
 </div>
 
 <div id="Append-element">
@@ -332,11 +312,9 @@
 </div>
 </div>
 
-
-
 </div>
 </div>
-
+-->
 
 </div>
 </div>
@@ -365,36 +343,13 @@
 <div class="CornerAnimayedFlex"><button class="Button CornerButton Button--plain" data-tooltip="建议反馈" data-tooltip-position="left" aria-label="建议反馈" type="button"><svg class="Zi Zi--Feedback" title="建议反馈" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M19.99 6.99L18 5s-1-1-2-1H8C7 4 6 5 6 5L4 7S3 8 3 9v9s0 2 2.002 2H19c2 0 2-2 2-2V9c0-1-1.01-2.01-1.01-2.01zM16.5 5.5L19 8H5l2.5-2.5h9zm-2 5.5s.5 0 .5.5-.5.5-.5.5h-5s-.5 0-.5-.5.5-.5.5-.5h5z"></path></svg></button></div><div class="CornerAnimayedFlex CornerAnimayedFlex--hidden"><button class="Button CornerButton Button--plain" data-tooltip="回到顶部" data-tooltip-position="left" aria-label="回到顶部" type="button"><svg class="Zi Zi--BackToTop" title="回到顶部" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M16.036 19.59a1 1 0 0 1-.997.995H9.032a.996.996 0 0 1-.997-.996v-7.005H5.03c-1.1 0-1.36-.633-.578-1.416L11.33 4.29a1.003 1.003 0 0 1 1.412 0l6.878 6.88c.782.78.523 1.415-.58 1.415h-3.004v7.005z"></path></svg></button></div></div></div></div><script src="https://static.zhihu.com/heifetz/vendor.72d10fe31301a0517a94.js"></script><script src="https://static.zhihu.com/heifetz/main.raven.a31320181616684830a2.js" async=""></script><script src="https://static.zhihu.com/heifetz/main.app.35c8ff3a88b940af11b0.js"></script><script></script><div><div data-reactroot="" style="display: none;">想来知乎工作？请发送邮件到 jobs@zhihu.com</div></div>
 <span><div></div></span>
 
-<div class="modal fade" id="11upAvatarModal" tabindex="-1" role="dialog" aria-labelledby="upAvatarModalLabel" aria-hidden="true">
-<div class="modal-dialog" style="width:300px;">
-
-<div class="Modal-content">
-
-<div class="modal-header">
-<h3 class="Modal-title">编辑头像</h3>
-<div class="Modal-subtitle">调整头像尺寸和位置</div>
-</div>
-<!--
-<div class="modal-body">
-<img id="pre_head" src="" width="300" height="300"> 
-</div>
-<div>
-<div class="modal-footer">
-<button class="btn btn-blue" type="button" onclick="FileUpload()">保存</button>
-</div>
-</div>
--->
-</div>
-</div>
-</div>
-
 <!--
 <div class="Modal-wrapper">
 <div class="Modal-backdrop">
 </div>
 -->
 <div id="upAvatarModal" class="modal fade 1Modal 1Modal--default 1UploadImageModal-modal" tabindex="-1" role="dialog" 1aria-labelledby="upAvatarModalLabel" 1aria-hidden="true">
-<div class="modal-dialog" style="width:500px;">
+<div class="modal-dialog" style="#width:200px;">
 
 <div class="Modal-inner">
 <h3 class="Modal-title">编辑头像</h3>
@@ -402,20 +357,24 @@
 <div class="Modal-content">
 <div>
 <div class="UploadImageModal-container">
-<canvas width="300" height="300" style="width: 240px; height: 240px;"></canvas>
+<div style="text-align:center">
+<img id="preview_avatar" width="300px" height="300px" alt="" >
 </div>
-<div>
+<div  id="chooseBox" style="width: 200px;height: 200px;border: 1px solid #4fb8e3;position: absolute;left: 200px;top: 163px;z-index: 1000"></div>
+<canvas id="avatar_canvas" width="200" height="200" style="width: 200px; height: 200px;display:none"></canvas>
+</div>
+<div style="text-align:center">
 <svg class="Zi Zi--Size" fill="currentColor" viewBox="0 0 24 24" width="18" height="18"><path d="M16.296 7h.697A1.01 1.01 0 0 1 18 8.003v10.995c0 .554-.45 1.003-1.007 1.003H4.007A1.01 1.01 0 0 1 3 18.998V8.003C3 7.449 3.45 7 4.007 7h12.289zm-.892 11a.6.6 0 0 0 .597-.601V9.601A.597.597 0 0 0 15.405 9H5.596A.599.599 0 0 0 5 9.602v7.797c0 .335.267.601.596.601h9.808zM7 4h13a1 1 0 0 1 1 1v11a1 1 0 0 1-2 0V6.5c0-.5-.5-.5-.5-.5H7a1 1 0 0 1 0-2z" fill-rule="evenodd"></path></svg>
-<input type="range" step="0.01" min="1" max="2" class="RangeInput" value="1">
+<input id="adjust_choosebox"type="range" step="1" min="0" max="100" class="RangeInput" value="50" style="display:inline" oninput="AdjustChooseBox()">
 <svg class="Zi Zi--Size" fill="currentColor" viewBox="0 0 24 24" width="22" height="22"><path d="M16.296 7h.697A1.01 1.01 0 0 1 18 8.003v10.995c0 .554-.45 1.003-1.007 1.003H4.007A1.01 1.01 0 0 1 3 18.998V8.003C3 7.449 3.45 7 4.007 7h12.289zm-.892 11a.6.6 0 0 0 .597-.601V9.601A.597.597 0 0 0 15.405 9H5.596A.599.599 0 0 0 5 9.602v7.797c0 .335.267.601.596.601h9.808zM7 4h13a1 1 0 0 1 1 1v11a1 1 0 0 1-2 0V6.5c0-.5-.5-.5-.5-.5H7a1 1 0 0 1 0-2z" fill-rule="evenodd"></path></svg>
 </div>
 <div class="ModalButtonGroup ModalButtonGroup--vertical">
-<button class="Button Button--primary Button--blue" type="button">保存</button>
+<button class="Button Button--primary Button--blue" type="button" onclick="SaveFile()">保存</button>
 </div>
 </div>
 </div>
 </div>
-<button class="Button Modal-closeButton Button--plain" aria-label="关闭" type="button">
+<button data-dismiss="modal" class="Button Modal-closeButton Button--plain" aria-label="关闭" type="button">
 <svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg>
 </button>
 </div>
@@ -545,15 +504,64 @@ function appendAnswerElementSub(ret)
 }
 function appendAnswerElement()
 {
+    data='<div class="List Profile-answers" id="11Profile-answers" data-zop-feedlistfather="1">\
+            <div class="List-header">\
+            <h4 class="List-headerText"><span>他的回答</span></h4>\
+            </div>\
+            <div id="Append-element">\
+            </div>\
+            </div>\
+            ';
+    $("#ProfileMain").append(data);
     erid=$(".ProfileMain-header").attr("data-er-id");
     command=$(".ProfileMain-header").attr("data-command");
     $.get("/ajax/er/"+erid+"/"+command+"/",function(ret){
-        for(i in ret)
-            appendAnswerElementSub(ret[i]);
-        check_content_collapse();
-        check_content_expand()
+        if("null"!=ret)
+        {
+            for(i in ret)
+                appendAnswerElementSub(ret[i]);
+            check_content_collapse();
+            check_content_expand()
+        }
     });
 }
+function appendQuestionElementSub(ret)
+{
+    var question_id=ret[0];
+    var question_title=ret[1];
+    var question_pubdate=ret[2];
+    var question_answer_nums=ret[3];
+    var question_follower_nums=ret[4];
+    var data='\
+            <div class="List-item">\
+            <div class="ContentItem" ><h2 class="ContentItem-title"><div class="QuestionItem-title">\
+            <a href="/question/'+question_id+'" target="_blank">'+question_title+'</a></div></h2>\
+            <div class="ContentItem-status"><span class="ContentItem-statusItem">'+question_pubdate+'</span><span class="ContentItem-statusItem">'+question_answer_nums+' 个回答</span><span class="ContentItem-statusItem">'+question_follower_nums+' 个关注</span></div></div></div>\
+            ';
+    $("#Append-element").append(data);
+}
+function appendQuestionElement()
+{
+    data='<div class="List Profile-answers" id="Profile-answers">\
+            <div class="List-header">\
+            <h4 class="List-headerText"><span>他的问题</span></h4>\
+            </div>\
+            <div id="Append-element">\
+            </div>\
+            </div>\
+            ';
+    $("#ProfileMain").append(data);
+    erid=$(".ProfileMain-header").attr("data-er-id");
+    command=$(".ProfileMain-header").attr("data-command");
+    $.get("/ajax/er/"+erid+"/"+command+"/",function(ret){
+        if("null"!=ret)
+        {
+        for(i in ret)
+            appendQuestionElementSub(ret[i]);
+        }
+    });
+}
+
 function check_content_collapse(){
     $(".ContentItem-less").each(function(){
         $(this).click(function(){
@@ -586,6 +594,94 @@ function check_content_expand(){
         });
     });
 }
+
+function AdjustChooseBox()
+{
+    var width=200;
+    var height=200;
+    var left=$("#preview_avatar").position().left+50;
+    var top=$("#preview_avatar").position().top+50;
+   
+    var refLeft=$("#preview_avatar").position().left;
+    var refTop=$("#preview_avatar").position().top;
+    console.log(refLeft);
+    console.log(refTop);
+    /* 
+    console.log($("#preview_avatar").offset().left);
+    console.log($("#preview_avatar").offset().top);
+    console.log($("#preview_avatar").position().left);
+    console.log($("#preview_avatar").position().top);
+    console.log($("#chooseBox").offset().left);
+    console.log($("#chooseBox").offset().top);
+    console.log($("#chooseBox").position().left);
+    console.log($("#chooseBox").position().top);
+    */
+    
+    var adjust=$("#adjust_choosebox").val();
+    width=width+(adjust-50)*2;
+    height=height+(adjust-50)*2;
+    left=left-adjust+50;
+    top=top-adjust+50;
+    
+    $('#chooseBox').css({
+                    width:width+'px',
+                    height:height+'px',
+                    left:left+'px',
+                    top:top+'px'
+    });
+    
+    
+    $('#chooseBox').mousedown(function (e) {
+            var originX= e.offsetX;
+            var originY= e.offsetY;
+            left=$("#chooseBox").position().left;
+            top=$("#chooseBox").position().top;
+            console.log("mousedown");
+            window.onmousemove=function (e) {
+                //console.log("x=",originX,e.offsetX);
+                //console.log("y=",originY,e.offsetY);
+                //console.log($("#chooseBox").position().left);
+                //console.log($("#chooseBox").position().top);
+                $('#chooseBox').css({
+                    position:'absolute',
+                    left:left+e.offsetX-originX+'px',
+                    top: top+e.offsetY-originY+'px'
+                });              
+                
+                if($('#chooseBox').position().left<=refLeft){
+                    $('#chooseBox').css({
+                        left:refLeft+'px'
+                    });
+                }
+                if($('#chooseBox').position().left>=refLeft+300-width){
+                    $('#chooseBox').css({
+                        left:refLeft+300-width+'px'
+                    });
+                }
+                if($('#chooseBox').position().top<=refTop){
+                    $('#chooseBox').css({
+                        top:refTop+'px'
+                    });
+                }
+                if($('#chooseBox').position().top>=refTop+300-height){
+                    $('#chooseBox').css({
+                        top:refTop+300-height+'px'
+                    });
+                }
+                
+                $('#chooseBox').mouseout(function () {
+                    console.log("mouseout");
+                    window.onmousemove=null;
+                    return
+                })
+            };
+            window.onmouseup= function () {
+                console.log("onmouseup");
+                window.onmousemove=null;
+                return
+            }
+        });
+}
 //$(function(){
 function check_avatar(){
     $(".UserAvatarEditor").hover(
@@ -603,7 +699,15 @@ function check_avatar(){
                $("#upAvatarModal").modal('show');
                 var objUrl = getObjectURL(this.files[0]) ; //获取图片的路径，该路径不是图片在本地的路径
                 if (objUrl) {
-                    $("#pre_head").attr("src", objUrl) ; //将图片路径存入src中，显示出图片
+                    //var image = new Image();
+                    //image.src="/media/avatar/wudy1512464583.jpg";//objUrl;
+                    //var cvs=document.getElementById("avatar_canvas");
+                    //var ctx = cvs.getContext('2d');
+                    //ctx.drawImage(image, 100, 100, 240, 240);  
+                    $("#preview_avatar").attr("src", objUrl) ; //将图片路径存入src中，显示出图片
+                    $("#adjust_choosebox").val(50);                    
+                    
+                    setTimeout(AdjustChooseBox,1*1000);
                 }
             });
     });
@@ -623,11 +727,47 @@ url = window.webkitURL.createObjectURL(file) ;
 return url ;
 }
 
+/*
+function dataURLtoBlob(dataurl) {
+    var arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
+        bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
+    while(n--){
+        u8arr[n] = bstr.charCodeAt(n);
+    }
+    return new Blob([u8arr], {type:mime});
+}
+*/
+
+function SaveFile()
+{
+    var img=document.getElementById("preview_avatar");
+    imgWidth=img.naturalWidth;
+    var can=document.getElementById("avatar_canvas");
+        //var btn=document.getElementById("btn");
+        //var returnImg=document.getElementById("returnImg");
+    var ctx=can.getContext("2d");
+    var newX=($('#chooseBox').position().left-$('#preview_avatar').position().left)*(img.naturalWidth/300);
+    var newY=($('#chooseBox').position().top-$('#preview_avatar').position().top)*(img.naturalHeight/300);
+    var newWidth=newHeight=(200+($("#adjust_choosebox").val()-50)*2)*(img.naturalWidth/300);
+    var newHeight=(200+($("#adjust_choosebox").val()-50)*2)*(img.naturalHeight/300);
+    //console.log(img.naturalWidth);
+    //console.log(img.naturalHeight);
+    //console.log(newX,newY);
+    //ctx.drawImage(img,newX,newY,200*3.45,200*2.6,0,0,200,200);
+    ctx.drawImage(img,newX,newY,newWidth,newHeight,0,0,200,200);
+    //var data=can.toDataURL("image/jpeg");
+    //var blob = dataURLtoBlob(data);
+    //console.log(blob);
+    can.toBlob(function(blobUrl){
+        console.log(blobUrl);
+        FileUpload(blobUrl);
+    },"image/jpeg");   
+}
 //   上传附件到方法
-function FileUpload() {
+function FileUpload(file_info) {
 var form_data = new FormData();
-var file_info = $('#id_avatar_input')[0].files[0];
-form_data.append('imgfile',file_info);
+//var file_info = $('#id_avatar_input')[0].files[0];
+form_data.append('imgfile',file_info,"image.jpg");
 //if(file_info==undefined)暂且不许要判断是否有附件
 //alert('你没有选择任何文件');
 //return false
@@ -640,10 +780,10 @@ type:'POST',
 data: form_data,
 processData: false,  // tell jquery not to process the data
 contentType: false, // tell jquery not to set contentType
-success: function(callback) {
+success: function(ret) {
 $("#upAvatarModal").modal('hide');
-$("#id_avatar").attr("src",$("#pre_head").attr("src"));
-$("#id_avatar").attr("srcset",$("#pre_head").attr("src"));
+$("#id_avatar").attr("src",ret);
+$("#id_avatar").attr("srcset",ret);
 console.log("success");
 }
 }); // end ajax
@@ -664,8 +804,10 @@ $(document).ready(function(){
     });
     if ("answers"==command)
         appendAnswerElement();
-    else
-        alert("false");
+    else if("asks"==command)
+        appendQuestionElement();
+    else 
+        console.log("false");
 });
 </script>
 </body>
