--- a/question/templates/question/t_er_active.html
+++ b/question/templates/question/t_er_active.html
@@ -3,6 +3,7 @@
 <head>
 {%load static %}
 <meta charset="utf-8">
+<title>{{er.first_name}} - 大大大</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
 <meta name="renderer" content="webkit"/>
 <meta name="force-rendering" content="webkit"/>
