--- a/question/templates/question/t_index.html
+++ b/question/templates/question/t_index.html
@@ -3,7 +3,8 @@
 <head>
 {%load static %}
 <meta http-equiv="X-UA-Compatible" content="IE=11">
-<meta charset="utf-8"> 
+<meta charset="utf-8">
+<title>首页 - 大大大</title>
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
 <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
