--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -4,6 +4,7 @@
 {%load static %}
 <meta http-equiv="X-UA-Compatible" content="IE=11">
 <meta charset="utf-8"> 
+<title>{{ context_question.title }} - 大大大</title>
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
 <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
